--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "pretest": "npm run build",
     "test": "node tests/app.spec.js",
     "watch": "node scripts/watch.js",
-    "lint": "eslint . --ext js,ts,vue",
+    "lint": "eslint . --ext js,ts,tsx",
     "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck-renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
+    "typecheck-renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
     "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
   },
   "browserslist": [
@@ -27,28 +27,29 @@
     "pre-push": "npm run typecheck"
   },
   "lint-staged": {
-    "*.{js,ts,vue}": "eslint --cache --fix"
+    "*.{js,ts,tsx}": "eslint --cache --fix"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "2.2.0",
+    "@types/react": "17.0.26",
+    "@types/react-dom": "17.0.9",
     "@typescript-eslint/eslint-plugin": "4.32.0",
-    "@vitejs/plugin-vue": "1.9.2",
+    "@typescript-eslint/parser": "4.32.0",
     "cross-env": "7.0.3",
     "electron": "15.1.0",
     "electron-builder": "22.11.7",
     "electron-devtools-installer": "3.2.0",
     "eslint": "7.32.0",
-    "eslint-plugin-vue": "7.18.0",
     "lint-staged": "11.1.2",
     "playwright": "1.15.1",
     "simple-git-hooks": "2.6.1",
     "typescript": "4.4.2",
-    "vite": "2.6.2",
-    "vue-tsc": "0.3.0"
+    "vite": "2.6.2"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "1.0.1",
     "electron-updater": "4.6.0",
-    "vue": "3.2.19",
-    "vue-router": "4.0.11"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
