--- a/packages/renderer/.eslintrc.json
+++ b/packages/renderer/.eslintrc.json
@@ -6,6 +6,7 @@
   "extends": [
     /** @see https://eslint.vuejs.org/rules/ */
     "plugin:vue/vue3-recommended"
+    /** TODO react */
   ],
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
