--- a/package.json
+++ b/package.json
@@ -2,53 +2,53 @@
   "name": "vite-electron-builder",
   "private": true,
   "engines": {
-    "node": ">=v14.16",
-    "npm": ">=7.7"
+    "node": ">=v16.13",
+    "npm": ">=8.1"
   },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
-    "build": "node scripts/build.js",
-    "precompile": "cross-env MODE=production npm run build",
-    "compile": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
-    "pretest": "npm run build",
-    "test": "node tests/app.spec.js",
+    "build": "npm run build:main && npm run build:preload && npm run build:renderer",
+    "build:main": "cd ./packages/main && vite build",
+    "build:preload": "cd ./packages/preload && vite build",
+    "build:renderer": "cd ./packages/renderer && vite build",
+    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.js --dir --config.asar=false",
+    "test": "npm run test:main && npm run test:preload && npm run test:renderer && npm run test:e2e",
+    "test:e2e": "npm run build && vitest run",
+    "test:main": "vitest run -r packages/main --passWithNoTests",
+    "test:preload": "vitest run -r packages/preload --passWithNoTests",
+    "test:renderer": "vitest run -r packages/renderer --passWithNoTests",
     "watch": "node scripts/watch.js",
-    "lint": "eslint . --ext js,ts,tsx",
-    "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
-    "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck-renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
-    "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
-  },
-  "browserslist": [
-    "Chrome 94"
-  ],
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged",
-    "pre-push": "npm run typecheck"
+    "lint": "eslint . --ext js,ts,vue",
+    "typecheck:main": "tsc --noEmit -p packages/main/tsconfig.json",
+    "typecheck:preload": "tsc --noEmit -p packages/preload/tsconfig.json",
+    "typecheck:renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
+    "typecheck": "npm run typecheck:main && npm run typecheck:preload && npm run typecheck:renderer"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix"
   },
   "devDependencies": {
-    "@types/electron-devtools-installer": "2.2.0",
     "@types/react": "17.0.26",
     "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "4.32.0",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
     "@typescript-eslint/parser": "4.32.0",
     "@vitejs/plugin-react": "1.0.1",
     "cross-env": "7.0.3",
-    "electron": "15.1.0",
-    "electron-builder": "22.11.7",
+    "electron": "17.1.0",
+    "electron-builder": "22.14.13",
     "electron-devtools-installer": "3.2.0",
-    "eslint": "7.32.0",
+    "eslint": "8.9.0",
     "lint-staged": "11.1.2",
-    "playwright": "1.15.1",
-    "simple-git-hooks": "2.6.1",
-    "typescript": "4.4.2",
-    "vite": "2.6.5"
+    "playwright": "1.19.1",
+    "simple-git-hooks": "2.7.0",
+    "typescript": "4.5.5",
+    "happy-dom": "2.41.0",
+    "nano-staged": "0.6.0",
+    "vite": "2.8.4",
+    "vitest": "0.5.4"
   },
   "dependencies": {
-    "electron-updater": "4.6.0",
+    "electron-updater": "4.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
