--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -1,6 +1,15 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "esnext",
+    "target": "esnext",
+    "sourceMap": false,
+    "moduleResolution": "Node",
+    "skipLibCheck": true,
+    "strict": true,
+    "isolatedModules": true,
+
+    "types" : ["node"],
+
     "baseUrl": ".",
     "paths": {
       "/@/*": [
@@ -8,10 +17,15 @@
       ]
     },
   },
-  "files": [
-    "src/index.ts"
-  ],
   "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "../../types/**/*.d.ts"
+  ],
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
