--- a/packages/preload/tsconfig.json
+++ b/packages/preload/tsconfig.json
@@ -1,18 +1,27 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "esnext",
+    "target": "esnext",
+    "sourceMap": false,
+    "moduleResolution": "Node",
+    "skipLibCheck": true,
+    "strict": true,
+    "isolatedModules": true,
+
+    "types" : ["node"],
+
     "baseUrl": ".",
-    "paths": {
-      "/@/*": [
-        "./src/*"
-      ]
-    }
   },
-  "files": [
-    "types/electron-api.d.ts",
-    "src/index.ts"
-  ],
   "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "contracts.d.ts",
     "../../types/**/*.d.ts"
+  ],
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
   ]
 }
